# music_player

./: Cargo.toml  LICENSE  README.md
src/: gui.rs  kernel.rs  loader.rs  main.rs  types.rs  utils.rs
src/api/: api_linux.rs  mod.rs
src/cache/: artist_songs.json  playlist.json  songs_favorities.json
src/css/: control_bar.css  dark.css  light.css  playlist.css  sidebar.css
src/kernel/: imp.rs
src/widgets/: artists.rs  control_bar.rs  favorities.rs  mod.rs  playlist_widget.rs  setting.rs  sidebar.rs
