[package]
name = "music_player"
version = "0.1.0"
edition = "2024"
 
[dependencies]
gtk = "0.15"
gdk = "0.15"
gdk-pixbuf = "0.15"
gio = "0.15"
glib = "0.15"
lofty = "0.22.4"
once_cell = "1.21.3"
rodio = "0.20.1"
symphonia = {version = "0.5.4",features = ["mp3", "flac", "vorbis"]}
walkdir = "2"
rand = "0.8"
cairo-rs = "0.15"
fastrand = "2.3.0"
gstreamer = "0.23.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pango = "0.20.12"
image = "0.24"
